fixed mobile gallery container and heigh, FaQ tittle position, boats bottom margin and mobile overthefold text align

--- a/styles/boats.module.scss
+++ b/styles/boats.module.scss
@@ -2,6 +2,7 @@
 .boatsModule {
   background-color: $ligthBlue;
   position: relative;
+margin-bottom: -300px;
 }
 .topContent {
   display: flex;
